[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/Result_HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[node name="Result_HUD" type="Node2D"]
z_index = 5
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 640.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="this planet_lbl" type="Label" parent="."]
margin_left = 192.0
margin_top = 224.0
margin_right = 448.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 1 )
text = "This planet is..."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="livable_lbl" type="Label" parent="."]
visible = false
margin_left = 192.0
margin_top = 288.0
margin_right = 448.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.556863, 1, 0.333333, 1 )
text = "livable, you survived :D"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="not_livable_lbl" type="Label" parent="."]
visible = false
margin_left = 192.0
margin_top = 288.0
margin_right = 448.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.878431, 0.298039, 0.207843, 1 )
text = "not livable :("
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home_btn" type="Button" parent="."]
visible = false
margin_left = 256.0
margin_top = 408.0
margin_right = 384.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 2 )
text = "Home"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Home_btn" to="." method="_on_Home_btn_pressed"]
